feat: redoc and rapidoc openapi html generators
